Fix modals z-index

--- a/src/scss/organisms/modals/_all.scss
+++ b/src/scss/organisms/modals/_all.scss
@@ -9,6 +9,7 @@
   width: 100%;
   height: 100%;
   pointer-events: none;
+  z-index: 9;
 
   &.is-active {
     pointer-events: all;
